--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-    <title>Redis修改工具</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
-    <script src="network.js"></script>
+    <meta charset="UTF-8">
+    <title>WebUtils</title>
+    <link rel="stylesheet" href="css/index.css">
+    <script src="js/index.js"></script>
+    <script src="js/network.js"></script>
 </head>
 <script>
     window.addEventListener("DOMContentLoaded", () => {
@@ -14,7 +15,7 @@
 </script>
 
 <body>
-    <h1> <a href="/opt/code/github.com/Cc360428/web/index.html">Redis修改工具</a></h1>
+    <h1> <a href="/">道具修改工具</a></h1>
 
     <form id="updateRedis" method="post">
         <div class="form-group">
