--- a/prop.html
+++ b/prop.html
@@ -13,7 +13,7 @@
 
     .table-info {
         position: absolute;
-        top: 170px;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
