--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
     <div class="form-group">
         <label for="vip">VIP:</label>
-        <input type="text" id="vip" name="vip" placeholder="Must be 1-30 (Need to log in again)" onblur="checkDigit('vip')">
+        <input type="text" id="vip" name="vip" placeholder="Must be 1-30 (Need to log in again)"
+               onblur="checkDigit('vip')">
     </div>
 
     <div class=" form-group">
@@ -52,6 +53,18 @@
         <input type="text" id="nick" name="nick">
     </div>
 
+    <div class="form-group radio-group">
+        <label for="sex">Sex:</label>
+
+        <label class="radio-label" for="s_male">
+            <input type="radio" id="s_male" name="sex" value="S_Male">Male
+        </label>
+
+        <label class="radio-label" for="s_female">
+            <input type="radio" id="s_female" name="sex" value="S_Female">Female
+        </label>
+    </div>
+
     <div class="form-group">
         <label for="portrait">Portrait:</label>
         <input type="text" id="portrait" name="portrait" placeholder="Example (https://*)">
@@ -61,9 +74,12 @@
         <label for="unlock">Unlock:</label>
 
         <label class="radio-label" for="unlock-yes">
-            <input type="radio" id="unlock-yes" name="unlock" value="yes">Yes</label>
+            <input type="radio" id="unlock-yes" name="unlock" value="yes">Yes
+        </label>
+
         <label class="radio-label" for="unlock-no">
-            <input type="radio" id="unlock-no" name="unlock" value="no" checked>No</label>
+            <input type="radio" id="unlock-no" name="unlock" value="no" checked>No
+        </label>
     </div>
 
 
