--- a/index.html
+++ b/index.html
@@ -1,106 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>WebUtils</title>
-    <link rel="stylesheet" href="css/index.css">
-    <script src="js/index.js"></script>
-    <script src="js/network.js"></script>
-</head>
-<script>
-    window.addEventListener("DOMContentLoaded", () => {
-        selectPlatform();
-    });
-</script>
-
-<body>
-<h1><a href="/">Prop Modification Tool</a></h1>
-
-
-<form id="updateRedis" method="post">
-    <div class="form-group">
-        <label for="platform">Select:</label>
-
-        <select name="platform_id" id="platform_id" onchange="selectPlatform()">
-            <option value="default">Select Platform</option>
-        </select>
-
-        <select name="env_id" id="env_id" style="display: none;">
-            <option value="default">Environment</option>
-        </select>
-    </div>
-
-    <div class="form-group">
-        <label for="player">Player ID:</label>
-        <input type="text" id="player_id" name="player_id" placeholder="Required" required
-               onblur="checkDigit('player_id')">
-    </div>
-
-    <div class="form-group">
-        <label for="vip">VIP:</label>
-        <input type="text" id="vip" name="vip" placeholder="Must be 1-30 (Need to log in again)"
-               onblur="checkDigit('vip')">
-    </div>
-
-    <div class=" form-group">
-        <label for="chip">Chip:</label>
-        <input type="text" id="chip" name="chip" onblur="checkDigit('chip')">
-    </div>
-
-    <div class="form-group">
-        <label for="nick">Nick:</label>
-        <input type="text" id="nick" name="nick">
-    </div>
-
-    <div class="form-group radio-group">
-        <label for="sex">Sex:</label>
-
-        <label class="radio-label" for="s_male">
-            <input type="radio" id="s_male" name="sex" value="S_Male">Male
-        </label>
-
-        <label class="radio-label" for="s_female">
-            <input type="radio" id="s_female" name="sex" value="S_Female">Female
-        </label>
-    </div>
-
-    <div class="form-group">
-        <label for="portrait">Portrait:</label>
-        <input type="text" id="portrait" name="portrait" placeholder="Example (https://*)">
-    </div>
-
-    <div class="form-group radio-group">
-        <label for="unlock">Unlock:</label>
-
-        <label class="radio-label" for="unlock-yes">
-            <input type="radio" id="unlock-yes" name="unlock" value="yes">Yes
-        </label>
-
-        <label class="radio-label" for="unlock-no">
-            <input type="radio" id="unlock-no" name="unlock" value="no" checked>No
-        </label>
-    </div>
-
-
-    <div class="form-group">
-        <label for="other_id"> <a href="/prop.html" target="_blank">Other ID</a>:</label>
-        <input type="text" id="other_id" name="other_id" placeholder="PropId" onblur="checkDigit('other_id')">
-    </div>
-
-    <div class="form-group">
-        <label for="other_value">Other Value:</label>
-        <input type="text" id="other_value" name="other_value" placeholder="PropIdNumber"
-               onblur="checkDigit('other_value')">
-    </div>
-
-    <input type="submit" value="Update">
-</form>
-
-<script>
-    const form = document.getElementById('updateRedis');
-    form.addEventListener('submit', updateRedis);
-</script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><title>Local Game</title><script defer="defer" src="/static/js/main.c3f9c5ac.js"></script><link href="/static/css/main.131a7680.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
